--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "nodemon": "nodemon --experimental-modules --es-module-specifier-resolution=node index.js"
+    "start": "node server.js",
+    "nodemon": "nodemon --experimental-modules --es-module-specifier-resolution=node server.js"
   },
   "author": "NizTheDev",
   "license": "ISC",
@@ -19,8 +19,10 @@
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.7.2",
     "busboy": "^0.3.1",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
     "dotenv": "^8.2.0",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
@@ -31,10 +33,14 @@
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "lusca": "^1.7.0",
     "mongoose": "^5.13.11",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
     "nodemailer": "^6.4.18",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^3.0.3",
     "validator": "^13.5.2"
   },
