--- a/package.json
+++ b/package.json
@@ -21,22 +21,19 @@
     "busboy": "^0.3.1",
     "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
     "express-validator": "^6.7.0",
     "firebase-admin": "^9.4.2",
-    "googleapis": "^67.1.0",
-    "graphql": "^15.5.0",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "lusca": "^1.7.0",
     "mongoose": "^5.13.11",
     "multer": "^1.4.2",
-    "multer-gridfs-storage": "^4.2.0",
     "nodemailer": "^6.4.18",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
